// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен в AMP нарисовать кнопку "купить отчёт", если нет квоты и нет покета 1`] = `
<div
  className="OfferAmpVinReportButtons"
>
  <div
    className="OfferAmpVinReportButtons__appSpoiler"
  >
    Смотрите полный отчёт в мобильном
    <br />
    приложении Авто.ру
  </div>
  <AmpButton
    className="OfferAmpVinReportButtons__button"
    color="blue"
    size="l"
    type="link"
    url="https://sb76.adj.st/link/proauto-report/?history_entity_id=1085562758&history_entity_id=1970f439&adjust_deeplink=autoru%3A%2F%2Fapp%2Flink%2Fproauto-report%2F%3Fhistory_entity_id%3D1085562758%26history_entity_id%3D1970f439&adjust_t=m1nelw7_eb04l75&adjust_campaign=mobweb_history_card"
    width="full"
  >
    <span>
      Купить в приложении 
      <AmpPrice
        className="OfferAmpVinReportButtons__buttonContent"
        currency="RUR"
        prefix="за"
        price={99}
      />
    </span>
  </AmpButton>
</div>
`;

exports[`должен в AMP нарисовать кнопку "смотреть в приложении", если отчёт оплачен 1`] = `
<div
  className="OfferAmpVinReportButtons"
>
  <div
    className="OfferAmpVinReportButtons__appSpoiler"
  >
    Смотрите полный отчёт в мобильном
    <br />
    приложении Авто.ру
  </div>
  <AmpButton
    className="OfferAmpVinReportButtons__button"
    color="transparentBlue"
    size="l"
    type="link"
    url="https://sb76.adj.st/link/proauto-report/?history_entity_id=1085562758&history_entity_id=1970f439&adjust_deeplink=autoru%3A%2F%2Fapp%2Flink%2Fproauto-report%2F%3Fhistory_entity_id%3D1085562758%26history_entity_id%3D1970f439&adjust_t=m1nelw7_eb04l75&adjust_campaign=mobweb_history_card"
    width="full"
  >
    <span>
      Смотреть в приложении
    </span>
  </AmpButton>
</div>
`;
